Modal panel_menu overflow fix

--- a/src/components/PanelButton.module.css
+++ b/src/components/PanelButton.module.css
@@ -101,6 +101,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
+  overflow-y: auto;
 
   /* border: 1px solid grey; */
 }
@@ -201,25 +202,25 @@
   .A_modal {
     margin: 4.8rem 3.2rem;
     height: calc(95vh - (4.8rem * 2));
-
     background-color: white;
   }
-
+  
   .panel_title {
     margin-bottom: 2.4rem;
   }
-
+  
   .panel_menu_content_container {
     flex-direction: column;
     gap: 3.2rem;
     height: calc(95vh - (4.8rem * 2) - (3.2rem * 4.75));
   }
-
+  
   .panel_menu {
     width: 100%;
     text-align: center;
     flex: 0 1 auto;
-
+    overflow-y: visible;
+    
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
@@ -227,7 +228,7 @@
     padding-bottom: 2.4rem;
     border-bottom: 1px solid #555;
   }
-
+  
   .panel_content {
     width: 100%;
     /* height: 50vh; */
